--- a/code/style.css
+++ b/code/style.css
@@ -7,7 +7,7 @@ body {
   background-color: #F3F0D7;
 }
 
-header {
+.header {
   display: flex;
   height: 80px;
 }
@@ -21,7 +21,7 @@ header {
   transform: rotate(-30deg);
 }
 
-nav {
+.nav {
   display: none;
   float: right;
   align-items: center;
