--- a/code/style.css
+++ b/code/style.css
@@ -105,8 +105,7 @@ div.card {
   border: 3px solid rgb(173, 115, 6);
   margin: 1.3rem;
   background-color: cornsilk;
-  width: 90%;
-  margin:30px auto;
+  margin:30px;
 }
 
 h3 {
@@ -148,7 +147,6 @@ footer {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    width: 90%;
     margin:0 auto;
   }
   div.card {
