--- a/code/style.css
+++ b/code/style.css
@@ -4,7 +4,7 @@ body {
 
 /* Navbar*/
 .logo {
-  width: 100px;
+  width: 80px;
   background-color: white;
   border-radius: 50%;
 }
@@ -132,13 +132,15 @@ p {
 footer {
   background-color: #00607F;
   display: flex;
-  justify-content: space-evenly;
+  justify-content: center;
   margin: auto;
 }
 
 footer img {
   width: 50px;
   height: 50px;
+  margin: 0 20px;
+  padding: 10px;
 }
 /* Media queries*/
 
@@ -146,7 +148,7 @@ footer img {
 @media (min-width: 0px) and (max-width: 767px) {
  
   .nav-bar a {
-    padding: 0 10px; 
+    padding: 10px; 
     }
   .text-pic img {
     width: 15%;
