--- a/code/style.css
+++ b/code/style.css
@@ -4,7 +4,7 @@ body {
 
 /* Navbar*/
 .logo {
-  width: 80px;
+  width: 50px;
   background-color: white;
   border-radius: 50%;
 }
@@ -19,7 +19,7 @@ header {
 }
 
 .nav-bar a {
-  font-size: 30px;
+  font-size: 20px;
   padding: 0px 10px;
   color:white;
   text-decoration: none;
@@ -46,12 +46,21 @@ padding: 50px;
 }
 
 /* Text */
+
+.newspaper-logo {
+  font-size: 25px;
+}
+
+.big-news-text {
+  font-size: 20px;
+}
+
+
 h1 {
   margin: auto;
   background-color: white;
   display:inline;
-  font-size: 3em;
-  padding: 10px;
+ 
   margin: 0;
 }
 
@@ -117,12 +126,12 @@ p {
 
 .text-pic {
   background-color: white;
-  margin: 25px 50px;
+  grid-column-start: 1;
   padding: 10px;
   border: 2px solid black;
   grid-column: span 4;
+ 
 }
-
 .text-pic img {
   width: 100%;
   padding-bottom: 10px;
@@ -158,15 +167,30 @@ footer img {
 
 /* TABLET*/ 
 @media (min-width: 768px) and (max-width: 991px) {
+  .logo {
+    width: 80px;
+    background-color: white;
+    border-radius: 50%;
+  }
+  
+  .big-news-text {
+    border: 2px solid black;
+    background-color: white;
+    margin:0px 30px 30px;
+    padding: 50px 80px;
+   text-align: center;
+  }
+  
+  
   .text-pic {
     display: flex;
-    justify-content: center;
+    justify-content: start;
     grid-column: span 2;
     background-size: 100px 100px;
     background-repeat: no-repeat;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: start;
     margin: 10px;
   }
 
@@ -178,7 +202,26 @@ footer img {
 
 /* DESKTOP */
 @media (min-width: 992px) {
-h1 {
+  .big-news {
+    margin-top: 30px;
+    padding-top: 30px;
+    background-image: url(leather-nunchuck.png);
+    background-size: 200px 200px;
+    background-repeat: no-repeat;
+  }
+  
+  .big-news-text {
+    border: 2px solid black;
+    background-color: white;
+    margin:0px 30px 30px;
+    padding: 50px 100px;
+   text-align: center;
+  }
+
+
+
+
+  h1 {
     font-size: 80px; 
   }
 
@@ -195,11 +238,11 @@ h1 {
     display: flex;
     border: none;
     margin: 0px;
-    justify-content: center;
+    justify-content: start;
     grid-column: span 1;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: start;
     
     /*Liten bild uppe i vänstra hörnet*/
     background-image: url(leather-nunchuck.png);
